--- a/Client/app/src/main/res/values/colors.xml
+++ b/Client/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#EB1A06</color>
+    <color name="colorPrimaryDark">#B41405</color>
+    <color name="colorAccent">#E5C7C4</color>
 </resources>
