--- a/Client/app/src/main/res/layout/row.xml
+++ b/Client/app/src/main/res/layout/row.xml
@@ -13,7 +13,7 @@
 
     <ImageView
         android:id="@+id/symbol"
-        android:layout_width="200dp"
+        android:layout_width="166dp"
         android:layout_height="70dp"
         android:layout_weight="1"
         android:paddingRight="4dp" />
@@ -21,26 +21,48 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="2"
-        android:orientation="vertical">
+        android:layout_weight="1"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:orientation="vertical"
+            android:paddingLeft="10dp">
+
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:ellipsize="end"
+                android:gravity="center_vertical"
+                android:maxLines="1"
+                android:textColor="#E44646"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/description"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:ellipsize="end"
+                android:gravity="center_vertical"
+                android:maxLines="1"
+                android:textColor="#2B2626" />
+        </LinearLayout>
 
         <TextView
-            android:id="@+id/title"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:ellipsize="end"
+            android:id="@+id/price"
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
             android:gravity="center_vertical"
-            android:maxLines="1"
-            android:textStyle="bold" />
+            android:textColor="#FF0000"
+            android:textColorHint="@color/colorPrimary"
+            android:textSize="30sp" />
 
-        <TextView
-            android:id="@+id/address"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:ellipsize="end"
-            android:gravity="center_vertical"
-            android:maxLines="1" />
     </LinearLayout>
+
 </LinearLayout>
