--- a/Client/app/src/main/res/layout/activity_transaction_details.xml
+++ b/Client/app/src/main/res/layout/activity_transaction_details.xml
@@ -49,5 +49,5 @@
         android:layout_gravity="right"
         android:layout_marginRight="20dp"
         android:onClick="backButton"
-        android:text="Button" />
+        android:text="Back" />
 </LinearLayout>
