--- a/Client/app/src/main/res/layout/activity_new_transaction.xml
+++ b/Client/app/src/main/res/layout/activity_new_transaction.xml
@@ -11,7 +11,7 @@
     <TableRow
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_margin="10dp"
+        android:layout_marginTop="5dp"
         android:gravity="center_horizontal">
 
         <Button
@@ -25,13 +25,34 @@
 
     <TableRow
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="270dp"
         android:layout_margin="10dp">
 
         <ListView
             android:id="@+id/products"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
+    </TableRow>
+
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_margin="5dp"
+        android:gravity="center_horizontal">
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Total: " />
+
+        <TextView
+            android:id="@+id/total"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="5€"
+            android:textColor="@color/colorPrimary"
+            android:textSize="30sp" />
     </TableRow>
 
     <TableRow
@@ -64,7 +85,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Use Sotred Disscount?" />
+            android:text="Use Stored Disscount?" />
 
         <TextView
             android:id="@+id/textView4"
