--- a/Client/app/src/main/res/layout/activity_new_transaction.xml
+++ b/Client/app/src/main/res/layout/activity_new_transaction.xml
@@ -36,9 +36,9 @@
 
     <TableRow
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="40dp"
         android:layout_margin="5dp"
-        android:gravity="center_horizontal">
+        android:gravity="center_horizontal|center_vertical">
 
         <TextView
             android:id="@+id/textView5"
