--- a/Client/app/src/main/res/layout/activity_transaction_details.xml
+++ b/Client/app/src/main/res/layout/activity_transaction_details.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".DetailsProduct">
+    tools:context=".DetailsTransaction">
 
     <TextView
         android:id="@+id/name"
@@ -14,40 +14,63 @@
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginRight="20dp"
-        android:layout_weight="0"
         android:gravity="center_horizontal"
         android:text="insert name here"
         android:textColor="#E44646"
-        android:textSize="24sp" />
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@id/products"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <ListView
         android:id="@+id/products"
         android:layout_width="match_parent"
-        android:layout_height="498dp"
-        android:layout_margin="20dp"
-        android:layout_weight="1" />
+        android:layout_height="300dp"
+        app:layout_constraintBottom_toTopOf="@id/pricerow"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/name">
 
-    <TextView
-        android:id="@+id/price"
+    </ListView>
+
+    <TableRow
+        android:id="@+id/pricerow"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="20dp"
-        android:layout_weight="0"
-        android:gravity="center_horizontal"
-        android:text="5€"
-        android:textColor="#FF0000"
-        android:textSize="36sp" />
+        android:gravity="center_horizontal|center_vertical"
+        app:layout_constraintBottom_toTopOf="@id/button"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/products">
+
+        <TextView
+            android:id="@+id/tvresult2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal|center_vertical"
+            android:text="Total: " />
+
+        <TextView
+            android:id="@+id/price"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="5€"
+            android:textColor="#FF0000"
+            android:textSize="36sp" />
+
+    </TableRow>
 
     <Button
         android:id="@+id/button"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="right"
         android:layout_marginRight="20dp"
         android:onClick="backButton"
-        android:text="Back" />
-</LinearLayout>
+        android:text="Back"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/pricerow"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
