--- a/Client/app/src/main/res/layout/activity_new_transaction.xml
+++ b/Client/app/src/main/res/layout/activity_new_transaction.xml
@@ -13,21 +13,30 @@
         android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:onClick="addProduct"
         android:text="Add Product"
-        app:layout_constraintBottom_toTopOf="@id/products"
+        app:layout_constraintBottom_toTopOf="@id/tv_title"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        app:layout_constraintBottom_toTopOf="@id/products"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_title"/>
 
     <ListView
         android:id="@+id/products"
         android:layout_width="0dp"
         android:layout_height="300dp"
-        app:layout_constraintBottom_toBottomOf="@id/totalrow"
+        app:layout_constraintBottom_toTopOf="@id/totalrow"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/scan">
+        app:layout_constraintTop_toBottomOf="@id/tv_title">
 
     </ListView>
 
@@ -116,14 +125,14 @@
            app:layout_constraintTop_toBottomOf="@id/voucherow">
 
            <Button
-               android:id="@+id/button4"
+               android:id="@+id/generateQRcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Finish" />
 
            <Button
-               android:id="@+id/button3"
+               android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
