profile page, and hope server commitis decent

--- a/Client/app/src/main/res/menu/main.xml
+++ b/Client/app/src/main/res/menu/main.xml
@@ -5,4 +5,7 @@
     <item
         android:id="@+id/add"
         android:title="@string/mn_it_add"/>
+    <item
+        android:id="@+id/profile"
+        android:title="@string/check_profile"/>
 </menu>
