--- a/Client/app/src/main/res/layout/activity_transaction_details.xml
+++ b/Client/app/src/main/res/layout/activity_transaction_details.xml
@@ -8,7 +8,7 @@
     tools:context=".DetailsTransaction">
 
     <TextView
-        android:id="@+id/namelabel"
+        android:id="@+id/usernamelabel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
@@ -31,7 +31,7 @@
         app:layout_constraintBottom_toTopOf="@id/pricerow"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/namelabel">
+        app:layout_constraintTop_toBottomOf="@id/usernamelabel">
 
     </ListView>
 
