--- a/Client/app/src/main/res/layout/activity_register.xml
+++ b/Client/app/src/main/res/layout/activity_register.xml
@@ -13,7 +13,7 @@
 
 
     <EditText
-        android:id="@+id/email"
+        android:id="@+id/username"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -42,7 +42,7 @@
         android:selectAllOnFocus="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/email"
+        app:layout_constraintTop_toBottomOf="@id/username"
         app:layout_constraintBottom_toTopOf="@id/password" />
 
     <EditText
