--- a/Client/app/src/main/res/layout/activity_new_transaction.xml
+++ b/Client/app/src/main/res/layout/activity_new_transaction.xml
@@ -16,7 +16,8 @@
         android:text="Add Product"
         app:layout_constraintBottom_toTopOf="@id/products"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <ListView
@@ -68,17 +69,22 @@
         app:layout_constraintTop_toBottomOf="@id/totalrow">
 
         <CheckBox
-            android:id="@+id/discountlabel"
+            android:id="@+id/discount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Use Stored Disscount?" />
+            android:text="Use Discount?" />
 
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="wrap_content"
+        <SeekBar
+            android:id="@+id/seekBar"
+            style="@style/Widget.AppCompat.SeekBar.Discrete"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:text="X discount stored" />
+            android:layout_gravity="center_vertical"
+            android:clickable="false"
+            android:max="50"
+            android:progress="10" />
+
     </TableRow>
 
    <TableRow
