--- a/Client/app/src/main/res/layout/content_qr_code.xml
+++ b/Client/app/src/main/res/layout/content_qr_code.xml
@@ -11,7 +11,7 @@
         android:id="@+id/qr"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:scaleType="centerCrop"
+        android:scaleType="centerInside"
         app:layout_constraintBottom_toTopOf="@id/back"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
