--- a/Client/app/src/main/res/layout/activity_new_transaction.xml
+++ b/Client/app/src/main/res/layout/activity_new_transaction.xml
@@ -17,7 +17,9 @@
         app:layout_constraintBottom_toTopOf="@id/products"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:backgroundTint="@color/colorPrimary"
+        android:textColor="#FFFFFF"/>
 
 
     <ListView
@@ -72,18 +74,52 @@
             android:id="@+id/discount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Use Discount?" />
+            android:layout_marginRight="20dp"
+            android:text="Use Discount?"
+            android:textSize="12sp" />
 
-        <SeekBar
-            android:id="@+id/seekBar"
-            style="@style/Widget.AppCompat.SeekBar.Discrete"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:clickable="false"
-            android:max="50"
-            android:progress="10" />
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <TextView
+                android:id="@+id/currentdiscount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal|center_vertical"
+                android:layout_marginRight="10dp"
+                android:text="0 €"
+                android:textColor="#F44336"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/mindiscount"
+                android:layout_width="10dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_vertical"
+                android:gravity="center_vertical"
+                android:text="0"
+                android:textColor="@color/colorPrimary" />
+
+            <SeekBar
+                android:id="@+id/seekBar"
+                style="@style/Widget.AppCompat.SeekBar.Discrete"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:clickable="false"
+                android:max="50"
+                android:progress="10" />
+
+            <TextView
+                android:id="@+id/maxdiscount"
+                android:layout_width="20dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_vertical|end"
+                android:gravity="center_vertical"
+                android:text="0"
+                tools:text="50" />
+        </TableRow>
 
     </TableRow>
 
@@ -100,14 +136,15 @@
            android:id="@+id/voucher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
-           android:layout_weight="1"
-           android:text="Use Voucher?" />
+           android:text="Use Voucher?"
+           android:textSize="12sp" />
 
-       <TextView
-           android:id="@+id/textView3"
+       <Spinner
+           android:id="@+id/spinner1"
            android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:text="X vouchers left" />
+           android:layout_height="match_parent"
+           android:background="@android:drawable/btn_dropdown"
+           android:spinnerMode="dropdown" />
 
    </TableRow>
 
@@ -125,7 +162,9 @@
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
-               android:text="Finish" />
+               android:text="Finish"
+               android:backgroundTint="@color/colorPrimary"
+               android:textColor="#FFFFFF"/>
 
            <Button
                android:id="@+id/back"
@@ -133,7 +172,9 @@
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="backButton"
-               android:text="Back" />
+               android:text="Back"
+               android:backgroundTint="@color/colorPrimary"
+               android:textColor="#FFFFFF"/>
        </TableRow>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
