--- a/Client/app/src/main/res/layout/activity_profile.xml
+++ b/Client/app/src/main/res/layout/activity_profile.xml
@@ -137,6 +137,8 @@
         android:layout_marginRight="30dp"
         android:text="Back"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/table" />
+        app:layout_constraintTop_toBottomOf="@id/table"
+        android:backgroundTint="@color/colorPrimary"
+        android:textColor="#FFFFFF"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
