--- a/Client/app/src/main/res/layout/row.xml
+++ b/Client/app/src/main/res/layout/row.xml
@@ -25,7 +25,7 @@
             android:ellipsize="end"
             android:gravity="center_vertical"
             android:maxLines="1"
-            android:textColor="#E44646"
+            android:textColor="@color/colorPrimary"
             android:textStyle="bold" />
 
         <TextView
