main acituvity listeners

--- a/Client/app/src/main/res/layout/activity_profile.xml
+++ b/Client/app/src/main/res/layout/activity_profile.xml
@@ -6,6 +6,19 @@
     android:layout_height="match_parent"
     tools:context=".Profile">
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="43dp"
+        android:adjustViewBounds="false"
+        android:cropToPadding="false"
+        app:layout_constraintBottom_toTopOf="@+id/table"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/coyoteprofile" />
+
     <TableLayout
         android:id="@+id/table"
         android:layout_width="wrap_content"
@@ -133,12 +146,16 @@
         android:id="@+id/back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="293dp"
         android:layout_marginTop="50dp"
         android:layout_marginRight="30dp"
-        android:text="Back"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/table"
+        android:layout_marginBottom="157dp"
         android:backgroundTint="@color/colorPrimary"
-        android:textColor="#FFFFFF"/>
+        android:text="Back"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/table" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
