--- a/Client/app/src/main/res/layout/activity_register.xml
+++ b/Client/app/src/main/res/layout/activity_register.xml
@@ -19,9 +19,9 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="24dp"
-
         android:hint="Name"
         android:imeOptions="actionDone"
+        android:inputType="text"
         android:selectAllOnFocus="true"
         app:layout_constraintBottom_toTopOf="@id/username"
         app:layout_constraintEnd_toEndOf="parent"
@@ -35,7 +35,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="24dp"
-
+        android:inputType="text"
         android:hint="Username"
         android:selectAllOnFocus="true"
         app:layout_constraintBottom_toTopOf="@id/password"
