Working on Checkout

--- a/Client/app/src/main/res/layout/activity_new_transaction.xml
+++ b/Client/app/src/main/res/layout/activity_new_transaction.xml
@@ -156,7 +156,7 @@
             android:spinnerMode="dropdown" /> -->
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/selectVoucherButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/colorPrimary"
