--- a/Client/app/src/main/res/layout/activity_transaction_details.xml
+++ b/Client/app/src/main/res/layout/activity_transaction_details.xml
@@ -9,7 +9,7 @@
 
 
     <ListView
-        android:id="@+id/products"
+        android:id="@+id/productsDetails"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginBottom="30dp"
@@ -29,7 +29,7 @@
         app:layout_constraintBottom_toTopOf="@id/back"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/products">
+        app:layout_constraintTop_toBottomOf="@id/productsDetails">
 
         <TextView
             android:id="@+id/tvresult2"
