--- a/Client/app/src/main/res/layout/content_qr_code.xml
+++ b/Client/app/src/main/res/layout/content_qr_code.xml
@@ -21,12 +21,11 @@
         android:id="@+id/back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="backButton"
+        android:backgroundTint="@color/colorPrimary"
         android:text="Back"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/qr"
-        android:backgroundTint="@color/colorPrimary"
-        android:textColor="#FFFFFF"/>
+        app:layout_constraintTop_toBottomOf="@id/qr" />
 </androidx.constraintlayout.widget.ConstraintLayout>
